# tet-py

./: .gitignore  .mise.toml  CHANGELOG.md  Cargo.toml  HANDOFF.md  README.md  build.rs  pyproject.toml
.cargo/: config.toml.example
.github/workflows/: ci.yml  publish.yml
docs/: HANDOFF.md  README.md  operations.md
native/: Cargo.toml  build.rs
native/src/: lib.rs  numpy_export.rs  numpy_write.rs  writer.rs
python/tet/: __init__.py  _catalog.py  _docstrings.py  _dtype.py  _errors.py  _file.py  _native.pyi  _numpy.py  _query.py  _query_doc.py  _spill.py  _transform.py  _transform_result.py  _writer.py  catalog.py  file.py
python/tet/_catalog/: __init__.py
python/tet/_core/: __init__.py  docstrings.py  dtype.py
python/tet/_io/: __init__.py  numpy.py  spill.py
python/tet/_query/: __init__.py  doc.py  preview.py  result.py
python/tet/_transform/: __init__.py  ops.py  result.py
src/: lib.rs
tests/: conftest.py  test_catalog.py  test_errors.py  test_helpers.py  test_numpy.py  test_ops.py  test_preview.py  test_qc_ops.py  test_query_doc.py  test_smoke.py  test_write.py
