[package]
name = "tet-py"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Python extension for Tetration .tet files"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "tet_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
serde_json = "1.0"
# Local dev: ../tetration. Release: use `version = "0.1.6"` and drop `path`.
tetration = { version = "0.1.6", path = "../tetration", default-features = false }
