[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "tet-py"
version = "0.1.1"
description = "Python bindings for Tetration .tet files and the query engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "AHurowitz", email = "latkaindustries@gmail.com" }]
keywords = ["tetration", "tensor", "mmap", "zarr", "hdf5", "netcdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "maturin>=1.7", "mypy>=1.13", "numpy>=2.0"]

[project.urls]
Homepage = "https://github.com/Latka-Industries/tet-py"
Repository = "https://github.com/Latka-Industries/tet-py"
Documentation = "https://latka-industries.github.io/tetration-docs/python/"

[tool.maturin]
manifest-path = "native/Cargo.toml"
module-name = "tet._native"
python-source = "python"
features = ["pyo3/extension-module"]
py-limited-api = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
mypy_path = "python"
packages = ["tet"]
warn_return_any = true
warn_unused_configs = true
