[package]
name = "tet-py"
version = "0.1.1"
edition = "2021"
rust-version = "1.95"
description = "Python extension for Tetration .tet files"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "tet_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py311"] }
numpy = "0.28.0"
serde_json = "1.0"
tetration = { version = "0.1.9", default-features = false }
